# prac-tiny-cabal-nix

./: .gitignore  LICENSE  README.md  flake.nix  tiny-cabal-nix.cabal
app/: Main.hs
src/Tiny/: Greeting.hs
test/: Main.hs
